# krl-tutorials

./: .cspell.json  .env.example  .gitignore  .gitleaks.toml  .markdown-link-check.json  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-CONTENT  LICENSE_HEADERS_GUIDE.md  MIGRATION_COMPLETE_SUMMARY.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: .gitignore  DESCRIPTION.md  FUNDING.yml  REPOSITORY_METADATA.md  SUPPORT.md  TOPICS.txt  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/discussions/: CATEGORIES.md  README.md  STARTER_CAREER.md  STARTER_IDEAS.md  STARTER_QA.md  STARTER_SHOW_AND_TELL.md  WELCOME.md
.github/workflows/: build-and-sign.yml  build-and-sign.yml.disabled  lint.yml.disabled  markdown-quality.yml  notebook-validation.yml  security-checks.yml  test.yml  tests.yml  tests.yml.disabled  tutorial-quality.yml
docs/: WORKFLOWS.md  conf.py  index.rst  requirements.txt  virginia_diabetes_forecast_demo.md
docs/wiki/: Analytical-Tiers-Guide.md  Data-Sources.md  FAQ.md  Home.md  Installation-and-Setup.md  Quick-Start-Guide.md  README.md  Tutorial-Catalog.md
khipu-showcase/: .gitignore  AUDIT_CERTIFICATION.md  CERTIFICATION_SUMMARY.md  LICENSE  PHASE1_IMPLEMENTATION_GUIDE.md  README.md  RELEASE_NOTES.md  STRATEGIC_DEVELOPMENT_PLAN.md  TASK_TRACKER.md  TODO_MASTER.md  VISUAL_ROADMAP.md  mkdocs.yml  notebook_audit_real_data.md  pyproject.toml
khipu-showcase/.github/workflows/: ci.yml
khipu-showcase/benchmarks/: benchmark_suite.py
khipu-showcase/binder/: Dockerfile  postBuild
khipu-showcase/docker/: Dockerfile  docker-compose.yml
khipu-showcase/docs/: API_REFERENCE.md  QUICKSTART.md  VIDEO_SCRIPTS.md  index.md
khipu-showcase/docs/about/: changelog.md  license.md
khipu-showcase/docs/api/: clients.md  data.md  visualization.md
khipu-showcase/docs/contributing/: guidelines.md  security.md
khipu-showcase/docs/getting-started/: demo-mode.md  installation.md  quickstart.md
khipu-showcase/docs/tutorials/: index.md
khipu-showcase/notebooks/: 01-metro-housing-wage-divergence.ipynb  02-gentrification-early-warning.ipynb  03-economic-mobility-deserts.ipynb  04-environmental-justice-health.ipynb  05-climate-resilience-economics.ipynb  06-small-business-ecosystem.ipynb  10-urban-resilience-dashboard.ipynb  16-end-to-end-policy-pipeline.ipynb  17-parallel-gwr.ipynb  18-multi-source-data-warehouse.ipynb  19-advanced-time-series.ipynb  25-multi-unit-synthetic-control.ipynb  OPTIMIZATION_SUMMARY.md  QUICK_START.md  TREATMENT_EFFECT_OPTIMIZATION.md
khipu-showcase/notebooks/pdf_exports/: 11-heterogeneous-treatment-effects_executed.ipynb
khipu-showcase/notebooks/validation/: METHODOLOGY_COMPARISON.md  NB_VALIDATION_DID.ipynb  NB_VALIDATION_SCM.ipynb
khipu-showcase/src/khipu_demo/: __init__.py
khipu-showcase/src/khipu_demo/clients/: __init__.py
khipu-showcase/src/khipu_demo/data/: __init__.py
khipu-showcase/src/khipu_demo/visualization/: __init__.py
khipu-showcase/templates/: notebook_template.ipynb
khipu-showcase/tests/: __init__.py  test_clients.py  test_data.py  test_imports.py  test_visualization.py
notebooks/: API_KEYS_TESTING_GUIDE.md  INDEX.md  INTEGRATION_PHASE2_SUMMARY.md  MULTI_DOMAIN_WORKFLOW_ARCHITECTURE.md  TEST_NOTEBOOKS copy.md  TUTORIALS_STATUS.md  diabetes_causal_gru_county_level.ipynb  diabetes_causal_gru_tract_level.ipynb  diabetes_causal_gru_tract_level_NEW.ipynb  economic_forecasting_transformer copy.ipynb  economic_forecasting_transformer.ipynb  education_equity_lstm.ipynb  healthcare_causal_gru.ipynb  test_kernel.ipynb  test_notebooks.py
notebooks/01_fundamentals/: README.md
notebooks/01_fundamentals/D01_income_and_poverty/: D01_D01_income_and_poverty.ipynb  README.md
notebooks/01_fundamentals/D02_employment_and_labor/: D02_D02_employment_and_labor.ipynb  README.md
notebooks/01_fundamentals/D03_education/: D03_D03_education.ipynb  README.md
notebooks/02_health_housing/: README.md
notebooks/02_health_housing/D04_health/: D04_D04_health.ipynb  README.md
notebooks/02_health_housing/D05_housing/: D05_D05_housing.ipynb  README.md
notebooks/02_health_housing/D28_mental_health_and_wellbeing/: D28_D28_mental_health_and_wellbeing.ipynb  README.md
notebooks/03_inequality_demographics/: README.md
notebooks/03_inequality_demographics/D06_inequality_and_wealth/: D06_D06_inequality_and_wealth.ipynb  README.md
notebooks/03_inequality_demographics/D07_demographics_and_migration/: D07_D07_demographics_and_migration.ipynb  README.md
notebooks/04_economic_behavior/: README.md
notebooks/04_economic_behavior/D08_consumer_behavior_and_spending/: D08_D08_consumer_behavior_and_spending.ipynb  README.md
notebooks/04_economic_behavior/D09_industry_and_economic_structure/: D09_D09_industry_and_economic_structure.ipynb  README.md
notebooks/04_economic_behavior/D15_business_and_entrepreneurship/: D15_D15_business_and_entrepreneurship.ipynb  README.md
notebooks/05_social_systems/: README.md
notebooks/05_social_systems/D10_social_mobility_and_opportunity/: D10_D10_social_mobility_and_opportunity.ipynb  README.md
notebooks/05_social_systems/D18_social_services_and_safety_net/: D18_D18_social_services_and_safety_net.ipynb  README.md
notebooks/05_social_systems/D19_civic_engagement_and_political/: D19_D19_civic_engagement_and_political.ipynb  README.md
notebooks/05_social_systems/D20_digital_economy/: D20_D20_digital_economy.ipynb  README.md
notebooks/05_social_systems/D21_social_capital/: D21_D21_social_capital.ipynb  README.md
notebooks/05_social_systems/D29_innovation_and_entrepreneurship/: D29_D29_innovation_and_entrepreneurship.ipynb  README.md
notebooks/06_infrastructure_environment/: README.md
notebooks/06_infrastructure_environment/D12_environmental_economics/: D12_D12_environmental_economics.ipynb  (+1 more)
notebooks/07_justice_equity/: README.md
notebooks/08_culture_society/: README.md
notebooks/09_planned/: README.md
scripts/: secure_and_organize_notebooks.py
tests/: conftest.py
(+180 files in other folders)
