# pyproject.toml for khipu-showcase
# Public-facing demonstration notebooks for the Khipu Socioeconomic Analysis Suite

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khipu-demo"
version = "0.1.0"
description = "Public demo notebooks for the Khipu Socioeconomic Analysis Suite"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "KR-Labs", email = "team@kr-labs.io"},
]
keywords = [
    "socioeconomic",
    "analysis",
    "data-science",
    "public-policy",
    "housing",
    "demographics",
    "notebooks",
    "tutorial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
]

dependencies = [
    # Core data processing
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    
    # Visualization
    "plotly>=5.10.0,<6.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    
    # Jupyter support
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "nbval>=0.10.0",
    "hypothesis>=6.50.0",
    
    # Linting and formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    
    # Security
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
    "safety>=2.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-jupyter>=0.24.0",
]

geospatial = [
    "geopandas>=0.12.0",
    "folium>=0.14.0",
    "shapely>=2.0.0",
]

ml = [
    "scikit-learn>=1.2.0",
    "statsmodels>=0.14.0",
]

all = [
    "khipu-demo[dev,geospatial,ml]",
]

[project.urls]
Homepage = "https://github.com/KR-Labs/khipu-showcase"
Documentation = "https://kr-labs.github.io/khipu-showcase"
Repository = "https://github.com/KR-Labs/khipu-showcase"
Issues = "https://github.com/KR-Labs/khipu-showcase/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/khipu_demo"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/notebooks",
    "/templates",
    "/docs",
    "/tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "notebook: marks notebook tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================

[tool.coverage.run]
source = ["src/khipu_demo"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert usage (needed in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["khipu_demo"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"notebooks/*" = ["E402"]

# ============================================================================
# BLACK CONFIGURATION
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

# ============================================================================
# MYPY CONFIGURATION
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "notebooks/",
]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

# ============================================================================
# BANDIT CONFIGURATION
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Allow assert in tests

# ============================================================================
# DETECT-SECRETS CONFIGURATION
# ============================================================================

# Note: detect-secrets uses .secrets.baseline file
# Run: detect-secrets scan > .secrets.baseline
